compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_function_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn doStuff() {}"
---
----- SOURCE CODE
fn doStuff() {}

----- ERROR
error: Invalid function name
  ┌─ /src/one/two.gleam:1:4
  │
1 │ fn doStuff() {}
  │    ^^^^^^^ This is not a valid function name

Hint: Function names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: do_stuff
